# fingerprint-browser

./: README.md  index.html  package.json
docs/architecture/: runtime-contract.md  system-design.md
docs/plans/: 2026-03-12-instance-lifecycle.md  2026-03-12-profile-management.md  2026-03-12-project-skeleton.md  2026-03-12-runtime-adapter.md  2026-03-13-detection-lab.md
docs/product/: mvp-prd.md
src/: App.css  App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/features/automation/: AutomationPage.test.tsx  AutomationPage.tsx  index.ts  storage.test.ts  storage.ts
src/features/profiles/: ProfilesPage.test.tsx  ProfilesPage.tsx  index.ts  storage.test.ts  storage.ts
src/features/runtime/: adapter.test.ts  adapter.ts  index.ts  manager.test.ts  manager.ts
src/lib/: desktop.test.ts  desktop.ts
