[package]
name = "fingerprint_browser"
version = "0.1.0"
description = "Desktop manager shell for the fingerprint-browser MVP."
authors = ["Cat-Man"]
repository = "https://github.com/Cat-Man/fingerprint-browser"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fingerprint_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
